zmiana kon of onas

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Our <strong>Clients</strong></h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Nasi <strong>Klienci</strong></h2>
+          <p>Zrealizowaliśmy inwestycje dla wielu Klientów. Zdajemy sobie sprawę, że każda branża wymaga indywidualnego spojrzenia na projekt, dlatego nasze doświadczenie przekuwamy w sukces inwestycji.</p>
         </div>
 
         <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
@@ -397,6 +397,9 @@
               Polska <br><br>
               <strong>Telefon:</strong> +48 510 555 171<br>
               <strong>Email:</strong> info@bramfeld.pl<br>
+              <br>
+              <strong>NIP:</strong> 8733250889<br>
+              <strong>REGON:</strong> 122788522<br>
             </p>
           </div>
 
@@ -440,8 +443,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Flattern</span></strong>. All Rights Reserved
-        </div>
+          &copy; Copyright <strong><span>BRAMFELD</span></strong>.</div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
