--- a/portfolio.html
+++ b/portfolio.html
@@ -224,6 +224,9 @@
               Polska <br><br>
               <strong>Telefon:</strong> +48 510 555 171<br>
               <strong>Email:</strong> info@bramfeld.pl<br>
+              <br>
+              <strong>NIP:</strong> 8733250889<br>
+              <strong>REGON:</strong> 122788522<br>
             </p>
           </div>
 
@@ -267,8 +270,8 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Flattern</span></strong>. All Rights Reserved
-        </div>
+          &copy; Copyright <strong><span>BRAMFELD</span></strong>.       
+         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
