--- a/contact.html
+++ b/contact.html
@@ -115,20 +115,20 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <h4>Lokalizacja:</h4>
+                  <p>ul. Szarych Szeregów 2<br>33-100 Tarnów<br>Polska</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@bramfeld.pl</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <h4>Telefon:</h4>
+                  <p>+48 510 555 171<br>+48 733 791 167</p>
                 </div>
               </div>
             </div>
@@ -142,24 +142,24 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Imię" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Adres Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Temat" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Treść wiadomości" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
+                <div class="loading">Ładowanie</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Twoja wiadomość została wysłana. Dziękujemy!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Wyślij wiadomość</button></div>
             </form>
           </div>
 
@@ -185,6 +185,9 @@
               Polska <br><br>
               <strong>Telefon:</strong> +48 510 555 171<br>
               <strong>Email:</strong> info@bramfeld.pl<br>
+              <br>
+              <strong>NIP:</strong> 8733250889<br>
+              <strong>REGON:</strong> 122788522<br>
             </p>
           </div>
 
@@ -228,7 +231,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Flattern</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>BRAMFELD</span></strong>.
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
