--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Nasi <strong>Klienci</strong></h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Zrealizowaliśmy inwestycje dla wielu Klientów. Zdajemy sobie sprawę, że każda branża wymaga indywidualnego spojrzenia na projekt, dlatego nasze doświadczenie przekuwamy w sukces inwestycji.</p>
         </div>
 
         <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
