--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Welcome to <span>Flattern</span></h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+              <h2>Generalne <span>wykonawstwo inwestycji</span></h2>
+              <p>Zoptymalizujemy koszty inwestycji. Dzięki generalnemu wykonawstwu wynegocjujemy nalepsze ceny usług oraz materiałów budowlanych.</p>
+              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -100,9 +100,10 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Lorem Ipsum Dolor</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+              <h2>Od projektu po realizację</h2>
+              <p>Jako generalny wykonawca obsługujemy budownictwo przemysłowe i kubaturowe. Naszą specjalnością jest projektowanie i budowa hal przemysłowych, budowa magazynów, budowa zakładów produkcyjnych i obiektów biurowych na potrzeby
+                przedsiębiorstw działających w różnych sektorach gospodarczych.</p>
+              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -111,9 +112,9 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Sequi ea ut et est quaerat</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+              <h2>Przygotujemy dla Ciebie indywidualną ofertę</h2>
+              <p>Zajmiemy się znalezieniem odpowiedniego projektu oraz wykonawcy. Nasi specjaliści przygotują ofertę dopasowaną do Twoich potrzeb. </p>
+              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -142,10 +143,10 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3>BRAMFELD <span>generalny wykonawca</span> inwestycji</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> Świadczymy kompleksowe usługi, kltóre pozwalają szybko i sprawnie zrealizować każdą inwestycję budowlaną. Jako generalny wykonawca realizujemy wszystkie procesy niezbędne realizacji Państwa budowy.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Request a quote</a>
+            <a class="cta-btn align-middle" href="#">Skontaktuj się</a>
           </div>
         </div>
 
@@ -161,42 +162,43 @@
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Budownictwo przemysłowe</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Budownicto przemysłowe to przede wszystkim budowa obiektów produkcyjnych  i magazynowych, które wyposażamy w innowacyjne technologie produkcji oraz składowania.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Zaprojektuj i wybuduj</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p class="description">Zapewniamy kompleksową realizację inwestycji – począwszy od projektu poprzez uzyskanie stosownych pozwoleń, aż po budowę, wykończenie i wykonanie niezbędnych instalacji.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
               <h4 class="title"><a href="">Budownictwo specjalistyczne</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Pomożemy w wyposażeniu realizowanych inwestycji w specjalistyczne instalacje technologiczne, linie produkcyjne oraz właściwe zabezpieczenia obiektów.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href=""></a>Budownicto technologiczne</h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Dobierzemy odpowiednie wyposażenie dla realizowanych inwestycji, tak aby mogła realizowac założone cele produkcyjne i technologiczne.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Nadzór nad inwestycjami</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Nadzór inwestorski obejmuje najważniejsze elementy procesu budowlanego. Wymaga koordynacji specjalistów różnych branż.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               <h4 class="title"><a href="">Projektowanie</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Pomożemy wyszukać i zrealizowac projekty od fazy koncepcji, przez projekty budowlane
+                i wykonawcze, po projekty warsztatowe ściśle dostosowane do wymagań klientów.</p>
             </div>
           </div>
         </div>
