--- a/services.html
+++ b/services.html
@@ -105,42 +105,43 @@
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Budownictwo przemysłowe</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Budownicto przemysłowe to przede wszystkim budowa obiektów produkcyjnych  i magazynowych, które wyposażamy w innowacyjne technologie produkcji oraz składowania.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Zaprojektuj i wybuduj</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p class="description">Zapewniamy kompleksową realizację inwestycji – począwszy od projektu poprzez uzyskanie stosownych pozwoleń, aż po budowę, wykończenie i wykonanie niezbędnych instalacji.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
               <h4 class="title"><a href="">Budownictwo specjalistyczne</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Pomożemy w wyposażeniu realizowanych inwestycji w specjalistyczne instalacje technologiczne, linie produkcyjne oraz właściwe zabezpieczenia obiektów.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Budownicto technologiczne</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Dobierzemy odpowiednie wyposażenie dla realizowanych inwestycji, tak aby mogła realizowac założone cele produkcyjne i technologiczne.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Nadzór nad inwestycjami</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Nadzór inwestorski obejmuje najważniejsze elementy procesu budowlanego. Wymaga koordynacji specjalistów różnych branż.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               <h4 class="title"><a href="">Projektowanie</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Pomożemy wyszukać i zrealizowac projekty od fazy koncepcji, przez projekty budowlane
+                i wykonawcze, po projekty warsztatowe ściśle dostosowane do wymagań klientów.</p>
             </div>
           </div>
         </div>
