zmiana onas uslugi win

--- a/about.html
+++ b/about.html
@@ -106,28 +106,28 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3 data-aos="fade-up">Bramfeld - Generalne wykonawstwo inwestycji</h3>
               <p data-aos="fade-up">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Firma BRAMFELD to od 10 lat synonim doskonałej jakości! W naszej firmie postawiliśmy sobie za cel sprawienie, by wykonywane przez nas usługi były na jak najwyższym poziomie. Proponujemy optymalne rozwiązania i chcemy Państwa do siebie przekonać fachową obsługą oraz doskonałą jakością. Od kreatywnego planowania, przez fachową realizację aż po terminową dostawę – towarzyszymy Państwu na każdym etapie zamówienia. BRAMFELD to firma, która nie tylko stale się rozwija i szuka nowych wyzwań, ale także działa niezawodnie i jest zawsze dostępna dla swoich Klientów. Mamy doświadczenie w realizacji różnego rodzaju inwestycji zarówno w Polsce jak i w krajach Unii Europejskiej.
               </p>
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Kompleksowe wykonanie inwestycji</h4>
+                  <p>Pomożemy szybko i sprawnie zrealizować każdą inwestycję budowlaną.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Najlepsze produkty</h4>
+                  <p>Podczas naszej pracy używany najwyższej jakości materiałów i produktów pochodzących od najepszych światowych producentów.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Pomoc w projektowaniu</h4>
+                  <p>Pomożemy w stworzeniu indywidualnego projektu zamówionej inwestycji dostarczając pełną wizualizację.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>Jakość i gwarancja</h4>
+                  <p>Dostarczamy usługi na najwyższym poziomie i pomagamy w procesach serwisowych.</p>
                 </div>
               </div>
             </div><!-- End .content-->
