--- a/services.html
+++ b/services.html
@@ -164,25 +164,25 @@
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
                   <h4>Niższe koszty inwestycji</h4>
-                  <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
+                  <p>Generalne wykonawstwo obejmuje negocjowanie cen materiałów budowlanych, narzędzi i akcesoriów niezbędnych do wykonania projektu. Dzięki sprawdzonym dostawcom jesteśmy w stanie zapewnić najlepsze ceny.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
                   <h4>Od projektu po realizację</h4>
-                  <p>Voluptas vel esse repudiandae quo excepturi.</p>
+                  <p>Zajmujemy się wszystkimi procesami niezbędnymi do budowy obiektu. To my odpowiadamy za postęp prac od projektu po oddanie inwestycji do użytkowania.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
                   <h4>Niezbędna dokumentacja i podwykonawcy</h4>
-                  <p>Velit veniam ipsa sit nihil blanditiis mollitia natus.</p>
+                  <p>Pomagamy uzyskać niezbędne pozwolenia budowalne oraz zatrudniamy podwykonawców, jeśli zachodzi taka potrzeba.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
                   <h4>Monitoring postępu prac</h4>
-                  <p>Ratione hic sapiente nostrum doloremque illum nulla praesentium id</p>
+                  <p>Każdy etap postępu realizacji inwestycji jest przez nas monitorowany. Jako generalny wykonwaca inwestycji przejmujemy odpowiedzialność za poszczególne etapy budowy.</p>
                 </a>
               </li>
             </ul>
