zmiana linkowań strony

--- a/o-nas.html
+++ b/o-nas.html
@@ -68,10 +68,10 @@
 <nav id="navbar" class="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="about.html">O nas</a></li>
-    <li><a href="services.html">Oferta</a></li>
-    <li><a href="portfolio.html">Realizacje</a></li>
-    <li><a href="contact.html">Kontakt</a></li>
+    <li><a class="active" href="o-nas.html">O nas</a></li>
+    <li><a href="oferta.html">Oferta</a></li>
+    <li><a href="realizacje.html">Realizacje</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
   </ul>
   <i class="bi bi-list mobile-nav-toggle"></i>
 </nav><!-- .navbar -->
@@ -296,10 +296,10 @@
               <h4>Przydatne linki</h4>
               <ul>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">O nas</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Oferta</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Realizacje</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Kontakt</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="o-nas.html">O nas</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Oferta</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="realizacje.html">Realizacje</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="kontakt.html">Kontakt</a></li>
                 <br>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Ogólne warunki handlowe</a></li>
               </ul>
@@ -308,11 +308,11 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Oferta</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo przemysłowe</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Zaprojektuj i wybuduj</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo specjalistyczne i technologiczne</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Projektowanie</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Nadzór nad inwestycjami</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Budownictwo przemysłowe</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Zaprojektuj i wybuduj</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Budownictwo specjalistyczne i technologiczne</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Projektowanie</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Nadzór nad inwestycjami</a></li>
               </ul>
             </div>
   
