--- a/realizacje.html
+++ b/realizacje.html
@@ -68,10 +68,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">O nas</a></li>
-          <li><a href="services.html">Oferta</a></li>
-          <li><a class="active" href="portfolio.html">Realizacje</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="o-nas.html">O nas</a></li>
+          <li><a href="oferta.html">Oferta</a></li>
+          <li><a class="active" href="realizacje.html">Realizacje</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -233,11 +233,11 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Przydatne linki</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">O nas</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Oferta</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Realizacje</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Kontakt</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="o-nas.html">O nas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Oferta</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="realizacje.html">Realizacje</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kontakt.html">Kontakt</a></li>
               <br>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ogólne warunki handlowe</a></li>
             </ul>
